# point-cloud-handler

./: CMakeLists.txt  README.md  config.json
include/: LidarPointCloudHandler.h  ModelRepresentation.h  utils.h
src/: CMakeLists.txt  CMakeLists.txt~  CurbDetection.cpp  ExtractionAndMatching.cpp  LidarBoundingBoxCluster.cpp  LidarPointCloudHandler.cpp  ModelRepresentation.cpp  MultiframeIntegration.cpp  utils.cpp
